--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Document</title>
 </head>
 
-<body>
-  <script src="script6_2_2.js"></script>
+<body>1
+  <script src="part2/script1.js"></script>
 </body>
 
 </html>
