--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Document</title>
 </head>
 
-<body>1
-  <script src="part1/script7.js"></script>
+<body>
+  <script src="hw5/script5.js"></script>
 </body>
 
 </html>
