--- a/hw6/index copy.html
+++ b/hw6/index copy.html
@@ -6,10 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="js.js" defer></script>
+
 </head>
 
 <body>
-  <script src="hw6/test.js"></script>
+
+  <canvas id="c1" width="400" height="200"></canvas>
 </body>
 
 </html>
