--- a/hw6_prototype/index.html
+++ b/hw6_prototype/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <canvas id="c1" width="700" height="800"></canvas>
-  <script src="./js.js"></script>
+  <canvas id="c1"></canvas>
+  <script src="js.js"></script>
 </body>
 
 </html>
