--- a/hw6_functional/index.html
+++ b/hw6_functional/index.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
+  <canvas id="canvasID"></canvas>
+  <script src="js.js"></script>
 
-
-
-  <script src="hw7/test.js"></script>
 </body>
 
 </html>
