--- a/_itunes/index.html
+++ b/_itunes/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <div class="page-header">
-      <h1>Itunes Clips</h1>
+      <h1>iTunes Clips</h1>
     </div>
     <form id="search-form" role="search">
       <div class="form-group input-group add-on">
@@ -47,12 +47,12 @@
             alt="Первый слайд">
         </div> -->
       </div>
-      <a class="carousel-control-prev" id="carousel-btn-btn" href="#carouselExampleControls" role="button"
+      <a class="carousel-control-prev" id="carouselbtnbtn1" href="#carouselExampleControls" role="button"
         data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" id="carousel-btn-btn" href="#carouselExampleControls" role="button"
+      <a class="carousel-control-next" id="carouselbtnbtn2" href="#carouselExampleControls" role="button"
         data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
