--- a/test/index.html
+++ b/test/index.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<input id="pdv" type="button" value="Нажми меня!">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
 
-<body>
-  <script src="test.js"></script>
-</body>
-
-</html>
+<script>
+  pdv.onclick = function () {
+    alert('Спасибо');
+  };
+</script>
